--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^16.9.0",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
     "fontsource-roboto": "^3.0.3",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
