--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ios-pwa-prompt": "^1.8.4",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
