--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@storybook/node-logger": "^6.0.26",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.26",
+    "babel-loader": "8.1.0",
     "chromatic": "^5.2.0",
     "react-is": "^16.13.1"
   }
