feat: new copy, language selector, remove lock on search to country

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Changing Places",
-  "name": "Toilet Locator: Changing Places",
+  "name": "Changing Places International Map",
   "icons": [
     {
       "src": "favicon.ico",
