--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^4.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -19,7 +20,6 @@
     "@types/react-dom": "^16.9.0",
     "autosuggest-highlight": "^3.1.1",
     "date-fns": "^2.16.1",
-    "fontsource-roboto": "^3.0.3",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
