--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/react-dom": "^16.9.0",
     "autosuggest-highlight": "^3.1.1",
     "date-fns": "^2.16.1",
+    "faunadb": "^4.0.3",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ios-pwa-prompt": "^1.8.4",
     "react-scripts": "3.4.3",
+    "swr": "^0.4.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
