feat: context dependent env vars

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [build]
-  command = "yarn && yarn build"
+  command = "yarn build"
   functions = "netlify/functions"
+
+[[plugins]]
+  package = 'netlify-plugin-contextual-env'
+  [plugins.inputs]
+  mode = 'prefix'
