--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@storybook/react": "^6.0.26",
     "babel-loader": "8.1.0",
     "chromatic": "^5.2.0",
+    "netlify-plugin-contextual-env": "^0.3.0",
     "react-is": "^16.13.1"
   }
 }
