--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 build-storybook.log
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -26,3 +26,6 @@ build-storybook.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Local Netlify folder
+.netlify
