--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/react-dom": "^16.9.0",
     "autosuggest-highlight": "^3.1.1",
     "date-fns": "^2.16.1",
+    "faunadb": "^4.0.3",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ios-pwa-prompt": "^1.8.4",
     "react-scripts": "3.4.3",
+    "swr": "^0.4.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -60,6 +62,7 @@
     "@storybook/react": "^6.0.26",
     "babel-loader": "8.1.0",
     "chromatic": "^5.2.0",
+    "netlify-plugin-contextual-env": "^0.3.0",
     "react-is": "^16.13.1"
   }
 }
