--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-ios-pwa-prompt": "^1.8.4",
     "react-scripts": "3.4.3",
     "swr": "^0.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
