--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
   "name": "changing-places-map",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
-    "@fontsource/roboto": "^4.1.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@react-aria/interactions": "^3.2.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/autosuggest-highlight": "^3.1.0",
-    "@types/googlemaps": "^3.40.0",
-    "@types/jest": "^24.0.0",
-    "@types/lodash.throttle": "^4.1.6",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "autosuggest-highlight": "^3.1.1",
-    "date-fns": "^2.16.1",
-    "faunadb": "^4.0.3",
-    "lodash.throttle": "^4.1.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-ios-pwa-prompt": "^1.8.4",
+    "@fontsource/roboto": "4.2.2",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.57",
+    "@react-aria/interactions": "3.3.3",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "@types/autosuggest-highlight": "3.1.1",
+    "@types/googlemaps": "3.43.3",
+    "@types/jest": "24.0.0",
+    "@types/lodash.throttle": "4.1.6",
+    "@types/node": "12.0.0",
+    "@types/react": "16.9.0",
+    "@types/react-dom": "16.9.0",
+    "autosuggest-highlight": "3.1.1",
+    "date-fns": "2.19.0",
+    "faunadb": "4.1.1",
+    "lodash.throttle": "4.1.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-ios-pwa-prompt": "1.8.4",
     "react-scripts": "3.4.3",
-    "swr": "^0.4.1",
-    "typescript": "~3.7.2"
+    "swr": "0.5.4",
+    "typescript": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,15 +53,15 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@storybook/addon-actions": "^6.0.26",
-    "@storybook/addon-essentials": "^6.0.26",
-    "@storybook/addon-links": "^6.0.26",
-    "@storybook/node-logger": "^6.0.26",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.26",
+    "@babel/core": "^7.13.10",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/node-logger": "^6.1.21",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.1.21",
     "babel-loader": "8.1.0",
-    "chromatic": "^5.2.0",
+    "chromatic": "^5.7.0",
     "netlify-plugin-contextual-env": "^0.3.0",
     "react-is": "^16.13.1"
   }
