--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
     "@types/autosuggest-highlight": "3.1.1",
-    "@types/googlemaps": "3.43.3",
+    "@types/google.maps": "3.45.6",
     "@types/jest": "24.0.0",
     "@types/lodash.throttle": "4.1.6",
     "@types/node": "12.0.0",
