chore: move dependencies to dev

--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
     "@react-aria/interactions": "3.6.0",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.3.2",
-    "@testing-library/user-event": "7.1.2",
     "@types/autosuggest-highlight": "3.1.1",
     "@types/google.maps": "3.45.6",
     "@types/jest": "24.0.0",
@@ -60,6 +57,9 @@
     "@storybook/node-logger": "^6.1.21",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.1.21",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "babel-loader": "8.1.0",
     "chromatic": "^5.7.0",
     "netlify-plugin-contextual-env": "^0.3.0",
