--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "12.0.0",
     "@types/react": "17.0.21",
     "@types/react-dom": "17.0.9",
+    "@types/react-router-dom": "5.1.9",
     "autosuggest-highlight": "3.1.1",
     "date-fns": "2.19.0",
     "faunadb": "4.4.1",
@@ -22,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ios-pwa-prompt": "1.8.4",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "swr": "1.0.1",
     "typescript": "4.4.3"
