--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/autosuggest-highlight": "3.1.1",
     "@types/google.maps": "3.45.6",
     "@types/jest": "26.0.0",
+    "@types/lodash.orderby": "4.6.6",
     "@types/lodash.throttle": "4.1.6",
     "@types/node": "12.0.0",
     "@types/react": "17.0.21",
@@ -19,6 +20,7 @@
     "autosuggest-highlight": "3.1.1",
     "date-fns": "2.24.0",
     "faunadb": "4.4.1",
+    "lodash.orderby": "4.6.0",
     "lodash.throttle": "4.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
