--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
     "@react-aria/interactions": "3.6.0",
+    "@supabase/supabase-js": "^2.45.1",
     "@types/autosuggest-highlight": "3.1.1",
     "@types/google.maps": "3.45.6",
     "@types/jest": "26.0.0",
@@ -19,7 +20,6 @@
     "@types/react-router-dom": "5.1.9",
     "autosuggest-highlight": "3.1.1",
     "date-fns": "2.24.0",
-    "faunadb": "4.4.1",
     "lodash.orderby": "4.6.0",
     "lodash.throttle": "4.1.1",
     "react": "17.0.2",
